Fixed spacing on top of content and body. Also moved the h1 a little lower along with everything below it

--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,11 @@ body {
 h1 {
   width: 940px;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
   letter-spacing: 1px;
   font-size: 3em;
+  margin-top: 0;
+  padding-top: 70px;
 }
 
 .image-container {
